package MyExamples.Program13ToDo.Core;

public class View {
}
