package MyExamples.ProgramToDo;

public enum ButtonOnOff {
    ON,
    OFF
}
