package Seminar4.Messanger.MVP;

public class Presenter {
}
