@startuml
class MyExamples.Program13ToDo.Core.Formats.JSON {
+ boolean checkFile(FileWay)
+ boolean createFile()
+ String jsonRead(File)
}
class MyExamples.Program13ToDo.Core.OnOffButton.Power {
- ButtonOnOff state
+ void power()
+ String toString()
}
class MyExamples.Program13ToDo.Core.Users.Users {
- Id id
- String name
- String surname
- String patronymic
+ Users addUser(String,String,String)
+ boolean equals(Object)
+ int getId()
+ String toString()
}
class MyExamples.Program13ToDo.Core.Users.Id {
- int number
+ int getId()
+ String toString()
}
interface MyExamples.Program13ToDo.Core.Formats.Interfaces.CheckFile {
~ boolean checkFile(File)
}
class MyExamples.Program13ToDo.Core.MVP.Presenter {
- Model model
}
class MyExamples.Program13ToDo.Core.Users.SaveUsers {
}
class MyExamples.Program13ToDo.Core.ReadFileStorage {
~ JSON json
+ boolean check()
# boolean readFile()
}
class MyExamples.Program13ToDo.Core.MrReadIsReadingStorages {
+ String jsonRead()
}
interface MyExamples.Program13ToDo.Core.Formats.Interfaces.FileWay {
~ File WAY_TO_DO
~ File WAY_USERS
}
class MyExamples.Program13ToDo.Core.MVP.Model {
- ReadFileStorage readFileStorage
- CreateFileStorage createFileStorage
- Power power
+ Power pressTheButtonPower()
+ Users addNewUser()
+ void appendUser(Users)
+ String checkFileToDo()
+ boolean createFile()
+ void readFile()
+ String toString()
}
class MyExamples.Program13ToDo.Core.MVP.View {
}
class MyExamples.Program13ToDo.Core.Users.ReadUsersList {
+ String usersInfo()
}
class MyExamples.Program13ToDo.Core.CreateFileStorage {
- JSON json
+ boolean createFileStorage()
}
class MyExamples.Program13ToDo.Client.Program {
+ {static} void main(String[])
}
enum MyExamples.Program13ToDo.Core.OnOffButton.ButtonOnOff {
+  ON
+  OFF
}
interface MyExamples.Program13ToDo.Core.Formats.Interfaces.CreateFile {
~ boolean createFile(File)
}


MyExamples.Program13ToDo.Core.Formats.Interfaces.CheckFile <|.. MyExamples.Program13ToDo.Core.Formats.JSON
MyExamples.Program13ToDo.Core.Formats.Interfaces.CreateFile <|.. MyExamples.Program13ToDo.Core.Formats.JSON
MyExamples.Program13ToDo.Core.Formats.Interfaces.FileWay <|.. MyExamples.Program13ToDo.Core.Users.SaveUsers
@enduml